eliminated most warnings affects AbstractMultiSet.java, CollectionsExt.java, and 7 more files...